fix: improve scrollbar alignment

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,20 @@ label span {
   right: 20px;
 }
 
-* {
-  box-sizing: border-box;
+::-webkit-scrollbar {
+  width: 9px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #ffffff77;
+  border-radius: 20px;
+  border: 1px dashed whitesmoke;
+}
+
+:focus-within::-webkit-scrollbar-thumb {
+  background-color: #ffffff77;
+  border-radius: 20px;
+  border: 1px dashed gold;
 }
